argocd-mgmt/k8s-mgmt/manifests/argo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/service-upstream: "true"
   # networking.gke.io/managed-certificates: auto-cert2
  namespace: argocd
    
spec:
  ingressClassName: nginx
  tls:
   - hosts:
       - argo.konzelmann.com.br
     secretName: letsencrypt-prod
  rules:
  - host: argo.konzelmann.com.br
    http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: argocd-server
              port:
                number: 443
